force-app/main/default/objects/Lead/fields/Broker_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_ID__c</fullName>
    <label>Broker ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>