force-app/main/default/objects/Lead/fields/Company_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Company_Net_Worth__c</fullName>
    <label>Company Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>