force-app/main/default/objects/Lead/fields/Funded_Volume__c.field-meta.xml
<CustomField>
    <fullName>Funded_Volume__c</fullName>
    <label>Funded Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>