force-app/main/default/objects/Lead/fields/Mortgage_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Business_Name__c</fullName>
    <label>Mortgage Business Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>