force-app/main/default/objects/Lead/fields/of_Loans__c.field-meta.xml
<CustomField>
    <fullName>of_Loans__c</fullName>
    <label># of Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>