force-app/main/default/objects/Lead/fields/Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Owner_s__c</fullName>
    <label>Owner(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>