force-app/main/default/objects/Lead/fields/States_Licensed_in__c.field-meta.xml
<CustomField>
    <fullName>States_Licensed_in__c</fullName>
    <label>States Licensed in</label>
    <type>TextArea</type>
</CustomField>