force-app/main/default/objects/Lead/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>CONV Non-Conforming</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>