force-app/main/default/objects/Lead/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>