force-app/main/default/objects/Lead/recordTypes/FINS_Commercial_Banking_Loan.recordType-meta.xml
<RecordType>
    <fullName>FINS_Commercial_Banking_Loan</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <description>Commercial Banking - Loan</description>
    <label>Commercial Banking - Loan</label>
</RecordType>